make phobos und deimos more realistic

--- a/src/styles/ui/_scene-toggles.scss
+++ b/src/styles/ui/_scene-toggles.scss
@@ -26,6 +26,8 @@
     transform 160ms ease,
     background 160ms ease,
     border-color 160ms ease;
+
+  min-width: 150px;
 }
 
 .scene-toggle:hover {
