--- a/src/ui/templates/scene-toggles.tpl.html
+++ b/src/ui/templates/scene-toggles.tpl.html
@@ -18,4 +18,14 @@
     <span class="scene-toggle__icon scene-toggle__icon--orbit" aria-hidden="true"></span>
     <span class="scene-toggle__text">{{orbitLabel}}</span>
   </button>
+
+  <button
+    class="scene-toggle scene-toggle--declutter {{declutterOffClass}}"
+    type="button"
+    aria-label="Toggle auto declutter"
+    data-action="toggle-declutter"
+  >
+    <span class="scene-toggle__icon scene-toggle__icon--declutter" aria-hidden="true"></span>
+    <span class="scene-toggle__text">{{declutterLabel}}</span>
+  </button>
 </div>
